// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LinuxPackager desktop file > all archive formats emit exactly one shared standalone desktop file in a single build 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.7z",
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.tar.xz",
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.tar.bz2",
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.tar.lz",
    },
    {
      "arch": "x64",
      "file": "testapp.desktop",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > appimage nested desktop config 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-x64.AppImage",
      "safeArtifactName": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
    {
      "arch": "x64",
      "file": "testapp.desktop",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > appimage nested desktop config 2`] = `
"[Desktop Entry]
Name=Test App
Exec="/opt/Test App ßW/testapp" %U
Terminal=false
Type=Application
Icon=testapp
StartupWMClass=Test App ßW
Comment=Test Application (test quite “ #378)
Categories=Development;
"
`;

exports[`LinuxPackager desktop file > desktop: true produces default desktop file 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
    {
      "arch": "x64",
      "file": "testapp.desktop",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > desktop: true produces default desktop file 2`] = `
"[Desktop Entry]
Name=Test App ßW
Exec="/opt/Test App ßW/testapp" %U
Terminal=false
Type=Application
Icon=testapp
StartupWMClass=Test App ßW
Comment=Test Application (test quite “ #378)
Categories=Development;
"
`;

exports[`LinuxPackager desktop file > desktopActions render into the standalone archive desktop file 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
    {
      "arch": "x64",
      "file": "testapp.desktop",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > desktopActions render into the standalone archive desktop file 2`] = `
"[Desktop Entry]
Name=Test App
Exec="/opt/Test App ßW/testapp" %U
Terminal=false
Type=Application
Icon=testapp
StartupWMClass=Test App ßW
Comment=Test Comment
Categories=Development;

[Desktop Action NewWindow]
Name=New Window
Exec=app --new-window
"
`;

exports[`LinuxPackager desktop file > desktopName sets StartupWMClass but not the standalone archive filename 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
    {
      "arch": "x64",
      "file": "testapp.desktop",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > dir target alone emits no standalone desktop file 1`] = `
{
  "linux": [],
}
`;

exports[`LinuxPackager desktop file > disable desktop file output (desktop: false) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > disable desktop file output (desktop: null) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > fileAssociations and protocols contribute MimeType to the standalone archive desktop file 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
    {
      "arch": "x64",
      "file": "testapp.desktop",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > forbid desktop.Comment 1`] = `"ERR_ELECTRON_BUILDER_INVALID_CONFIGURATION"`;

exports[`LinuxPackager desktop file > forbid desktop.Exec 1`] = `"ERR_ELECTRON_BUILDER_INVALID_CONFIGURATION"`;

exports[`LinuxPackager desktop file > multi-arch archive build with shared output dir emits exactly one desktop file 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
    {
      "arch": "arm64",
      "file": "TestApp-1.1.0-arm64.zip",
    },
    {
      "arch": "x64",
      "file": "testapp.desktop",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > package-target desktop config does not trigger standalone archive emission 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.AppImage",
      "safeArtifactName": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > standalone desktop file escapes newlines in desktop.entry overrides (no key injection) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
    {
      "arch": "x64",
      "file": "testapp.desktop",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > standalone desktop file escapes newlines in protocol schemes (no key injection) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
    {
      "arch": "x64",
      "file": "testapp.desktop",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > tar.gz with desktop 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.tar.gz",
    },
    {
      "arch": "x64",
      "file": "testapp.desktop",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > tar.gz with desktop 2`] = `
"[Desktop Entry]
Name=Test App
Exec="/opt/Test App ßW/testapp" %U
Terminal=false
Type=Application
Icon=testapp
StartupWMClass=Test App ßW
Comment=Test Comment
Categories=Development;
"
`;

exports[`LinuxPackager desktop file > zip 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
    {
      "arch": "x64",
      "file": "testapp.desktop",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > zip 2`] = `
"[Desktop Entry]
Name=Test App
Exec="/opt/Test App ßW/testapp" %U
Terminal=false
Type=Application
Icon=testapp
StartupWMClass=Test App ßW
Comment=Test Comment
Categories=Development;
"
`;

exports[`LinuxPackager desktop file > zip with mimeTypes (protocol registration) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
    {
      "arch": "x64",
      "file": "testapp.desktop",
    },
  ],
}
`;

exports[`LinuxPackager desktop file > zip with mimeTypes (protocol registration) 2`] = `
"[Desktop Entry]
Name=Test App
Exec="/opt/Test App ßW/testapp" %U
Terminal=false
Type=Application
Icon=testapp
StartupWMClass=Test App ßW
Comment=Test Comment
MimeType=x-scheme-handler/myapp;
Categories=Development;
"
`;
